[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/man/man09c_lift1.jpg" type="Texture2D" id=1]
[ext_resource path="res://images/man/hs/diary_black.png" type="Texture2D" id=2]
[ext_resource path="res://images/man/hs/diary_pink.png" type="Texture2D" id=3]
[ext_resource path="res://images/man/hs/diary_white.png" type="Texture2D" id=4]
[ext_resource path="res://images/man/hs/diary_blue.png" type="Texture2D" id=5]
[ext_resource path="res://images/man/hs/diary_purple.png" type="Texture2D" id=6]
[ext_resource path="res://images/man/hs/diary_green.png" type="Texture2D" id=7]
[ext_resource path="res://images/man/hs/diary_red.png" type="Texture2D" id=8]
[ext_resource path="res://images/man/hs/diary_orange.png" type="Texture2D" id=9]
[ext_resource path="res://images/man/hs/diary_yel.png" type="Texture2D" id=10]
[ext_resource path="res://scenes/man/man09c_lift1.gd" type="Script" id=11]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=12]

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="diary_pink" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false
offset = Vector2( 1438, 128 )

[node name="diary_yel" type="Sprite2D" parent="."]
visible = false
position = Vector2( 1.1189, 0 )
texture = ExtResource( 10 )
centered = false
offset = Vector2( 1490, 220 )

[node name="diary_blue" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false
offset = Vector2( 1384, 273 )

[node name="diary_red" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 8 )
centered = false
offset = Vector2( 1507, 445 )

[node name="diary_green" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false
offset = Vector2( 1395, 639 )

[node name="diary_black" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 1422, 804 )

[node name="diary_orange" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 9 )
centered = false
offset = Vector2( 1516, 883 )

[node name="diary_white" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( 1479, 1036 )

[node name="diary_purple" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( 1449, 1161 )

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = 1458.52
offset_top = 144.0
offset_right = 1543.52
offset_bottom = 232.0
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot2" type="TextureButton" parent="."]
offset_left = 1508.92
offset_top = 241.52
offset_right = 1583.92
offset_bottom = 309.52
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot3" type="TextureButton" parent="."]
offset_left = 1413.0
offset_top = 309.657
offset_right = 1495.0
offset_bottom = 375.657
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot4" type="TextureButton" parent="."]
offset_left = 1536.88
offset_top = 476.633
offset_right = 1606.88
offset_bottom = 545.633
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot5" type="TextureButton" parent="."]
offset_left = 1427.0
offset_top = 666.0
offset_right = 1501.0
offset_bottom = 738.0
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot6" type="TextureButton" parent="."]
offset_left = 1455.1
offset_top = 841.877
offset_right = 1518.1
offset_bottom = 908.877
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot7" type="TextureButton" parent="."]
offset_left = 1552.11
offset_top = 912.0
offset_right = 1611.11
offset_bottom = 984.0
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot8" type="TextureButton" parent="."]
offset_left = 1512.45
offset_top = 1070.22
offset_right = 1581.45
offset_bottom = 1140.22
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot9" type="TextureButton" parent="."]
offset_left = 1483.66
offset_top = 1200.61
offset_right = 1544.66
offset_bottom = 1276.61
mouse_default_cursor_shape = 13
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot10" type="TextureButton" parent="."]
offset_left = 2.62744
offset_top = 1286.72
offset_right = 2588.63
offset_bottom = 1473.72
mouse_default_cursor_shape = 6
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 2

[connection signal="pressed" from="Hotspot" to="." method="_on_Hotspot_pressed"]
[connection signal="pressed" from="Hotspot2" to="." method="_on_Hotspot2_pressed"]
[connection signal="pressed" from="Hotspot3" to="." method="_on_Hotspot3_pressed"]
[connection signal="pressed" from="Hotspot4" to="." method="_on_Hotspot4_pressed"]
[connection signal="pressed" from="Hotspot5" to="." method="_on_Hotspot5_pressed"]
[connection signal="pressed" from="Hotspot6" to="." method="_on_Hotspot6_pressed"]
[connection signal="pressed" from="Hotspot7" to="." method="_on_Hotspot7_pressed"]
[connection signal="pressed" from="Hotspot8" to="." method="_on_Hotspot8_pressed"]
[connection signal="pressed" from="Hotspot9" to="." method="_on_Hotspot9_pressed"]
[connection signal="pressed" from="Hotspot10" to="." method="_on_Hotspot10_pressed"]
